--- a/backend/client/package.json
+++ b/backend/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "config": "^3.0.1",
     "prop-types": "^15.7.2",
     "proptypes": "^1.1.0",
     "react": "^16.8.4",
